<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hp.workpath.sample.printsample.MainActivity">

    <FrameLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonBarLayout"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin" />

    <LinearLayout
        android:id="@id/buttonBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loadCapsButton"
            style="@style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_caps_button" />

        <Button
            android:id="@+id/loadDefaultsButton"
            style="@style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_defaults_button" />

        <Button
            android:id="@+id/printButton"
            style="@style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/print_text" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/getJobInfoButton"
            style="@style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getjobinfo_button" />

    </LinearLayout>
    <View
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="default" />
</RelativeLayout>

